--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "axios": "^0.9.1",
     "babel-polyfill": "^6.6.1",
     "bootstrap": "^3.3.6",
-    "bootstrap-table-react": "^1.0.1",
+    "bootstrap-table-react": "^1.1.1",
     "font-awesome": "^4.5.0",
     "lato-font": "^1.1.1",
     "ramda": "^0.19.1",
@@ -49,9 +49,8 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
+    "redux-form": "^4.2.2",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^1.0.3",
-    "tcomb": "^2.7.0",
-    "tcomb-validation": "^2.3.0"
+    "redux-thunk": "^1.0.3"
   }
 }
