--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
-    "redux-form": "^4.2.2",
     "redux-logger": "^2.6.1",
+    "redux-persist": "^2.0.1",
     "redux-thunk": "^1.0.3"
   }
 }
