--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.2.45",
     "axios": "^0.9.1",
     "babel-polyfill": "^6.6.1",
+    "bluebird": "^3.3.4",
     "bootstrap": "^3.3.6",
     "bootstrap-table-react": "^1.1.1",
     "font-awesome": "^4.5.0",
@@ -49,6 +51,7 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
+    "redux-form": "^4.2.2",
     "redux-logger": "^2.6.1",
     "redux-persist": "^2.0.1",
     "redux-thunk": "^1.0.3"
