--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-react": "^4.1.0",
     "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
     "mock-localstorage": "^0.1.3",
+    "redux-mock-store": "^1.0.2",
     "sd-builder": "^2.0.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
