--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "babel-cli": "^6.6.4",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-rewire": "^1.0.0-beta-4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -52,8 +52,10 @@
     "font-awesome": "^4.5.0",
     "kinesalite": "^1.11.4",
     "lato-font": "^1.1.1",
+    "lodash": "^4.7.0",
+    "node-uuid": "^1.4.7",
     "npm-run-all": "^1.6.0",
-    "ramda": "^0.19.1",
+    "ramda": "^0.20.1",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
@@ -63,6 +65,6 @@
     "redux-form": "^4.2.2",
     "redux-logger": "^2.6.1",
     "redux-persist": "^2.0.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^2.0.1"
   }
 }
