--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.2.45",
+    "axios": "^0.9.1",
     "babel-polyfill": "^6.6.1",
     "bluebird": "^3.3.4",
     "bootstrap": "^3.3.6",
