--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bluebird": "^3.3.4",
     "bootstrap": "^3.3.6",
     "bootstrap-table-react": "^1.1.1",
+    "dotenv": "^2.0.0",
     "font-awesome": "^4.5.0",
     "kinesalite": "^1.11.4",
     "lato-font": "^1.1.1",
