--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "kinesalite": "^1.11.4",
     "lato-font": "^1.1.1",
     "lodash": "^4.7.0",
+    "moment": "^2.13.0",
     "node-static": "^0.7.7",
     "node-uuid": "^1.4.7",
     "npm-run-all": "^1.6.0",
