--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,7 @@
         "react/jsx-no-duplicate-props": [2],
         "react/jsx-no-literals": [2],
         "react/jsx-no-undef": [2],
-        "react/jsx-sort-prop-types": [2],
+        "react/sort-prop-types": [2],
         "react/jsx-sort-props": [2],
         "react/jsx-uses-react": [2],
         "react/jsx-uses-vars": [2],
