--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev:start-dynamoDb": "babel-node scripts/start-dynamodb.js",
     "dev:start-kinesis": "babel-node scripts/start-kinesis.js",
     "dev:main": "sd-builder dev",
+    "dev:test": "npm test -- --watch",
     "dev": "npm-run-all --parallel dev:*",
-    "lint": "sd-builder lint",
+    "lint": "eslint app test",
     "build": "sd-builder build && babel server --out-dir build",
-    "test": "sd-builder test",
+    "test": "NODE_PATH=app NODE_ENV=test mocha --compilers jsx:babel-register --compilers js:babel-register --require test/setup.js --recursive test",
     "start": "NODE_PATH=build node build/index.js"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "dynalite": "^1.0.3",
