--- a/package.json
+++ b/package.json
@@ -1,77 +1,78 @@
 {
-    "name": "lk-app-front",
-    "version": "1.0.1",
-    "description": "lk app",
-    "main": "app/main.html",
-    "scripts": {
-        "dev:start-s3": "fakes3 -r /tmp/s3 -p 4568",
-        "dev:start-dynamoDb": "babel-node scripts/start-dynamodb.js",
-        "dev:start-kinesis": "babel-node scripts/start-kinesis.js",
-        "dev:main": "sd-builder dev",
-        "dev:test": "npm test -- --watch",
-        "dev": "npm-run-all --parallel dev:*",
-        "lint": "eslint app test",
-        "build": "sd-builder build && babel server --out-dir build",
-        "test": "NODE_PATH=app NODE_ENV=test mocha --compilers jsx:babel-register --compilers js:babel-register --require test/setup.js --recursive test",
-        "start": "NODE_PATH=build node build/index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lk-architecture/lk-app-front.git"
-    },
-    "bugs": {
-        "url": "https://github.com/lk-architecture/lk-app-front/issues"
-    },
-    "license": "Apache-2.0",
-    "devDependencies": {
-        "babel-cli": "^6.6.4",
-        "babel-eslint": "^6.0.2",
-        "babel-plugin-rewire": "^1.0.0-beta-4",
-        "babel-polyfill": "^6.7.4",
-        "babel-preset-es2015": "^6.6.0",
-        "babel-preset-react": "^6.5.0",
-        "babel-preset-stage-0": "^6.5.0",
-        "babel-register": "^6.14.0",
-        "chai": "^3.5.0",
-        "chai-as-promised": "^5.2.0",
-        "dynalite": "^1.0.3",
-        "eslint": "^3.5.0",
-        "eslint-plugin-babel": "^3.1.0",
-        "eslint-plugin-react": "^6.2.1",
-        "jsdom": "^9.5.0",
-        "mocha": "^3.0.2",
-        "mock-localstorage": "^0.1.3",
-        "npm-run-all": "^3.1.0",
-        "redux-mock-store": "^1.0.2",
-        "sd-builder": "^3.0.1",
-        "sinon": "^1.17.3",
-        "sinon-chai": "^2.8.0"
-    },
-    "dependencies": {
-        "aws-sdk": "^2.2.45",
-        "axios": "^0.14.0",
-        "babel-polyfill": "^6.6.1",
-        "bluebird": "^3.3.4",
-        "bootstrap": "^3.3.6",
-        "bootstrap-table-react": "^1.1.1",
-        "dotenv": "^2.0.0",
-        "font-awesome": "^4.5.0",
-        "kinesalite": "^1.11.4",
-        "lato-font": "^1.1.1",
-        "lodash": "^4.7.0",
-        "moment": "^2.13.0",
-        "node-static": "^0.7.7",
-        "node-uuid": "^1.4.7",
-        "ramda": "^0.22.1",
-        "react": "^0.14.7",
-        "react-bootstrap": "^0.28.3",
-        "react-dom": "^0.14.7",
-        "react-redux": "^4.4.0",
-        "react-router": "^2.0.0",
-        "redux": "^3.3.1",
-        "redux-form": "^4.2.2",
-        "redux-logger": "^2.6.1",
-        "redux-persist": "^2.0.1",
-        "redux-thunk": "^2.0.1"
-    }
+  "name": "lk-app-front",
+  "version": "1.0.1",
+  "description": "lk app",
+  "main": "app/main.html",
+  "scripts": {
+    "dev:start-s3": "fakes3 -r /tmp/s3 -p 4568",
+    "dev:start-dynamoDb": "babel-node scripts/start-dynamodb.js",
+    "dev:start-kinesis": "babel-node scripts/start-kinesis.js",
+    "dev:main": "sd-builder dev",
+    "dev:test": "npm test -- --watch",
+    "dev": "npm-run-all --parallel dev:*",
+    "lint": "eslint app test",
+    "build": "sd-builder build && babel server --out-dir build",
+    "test": "NODE_PATH=app NODE_ENV=test mocha --compilers jsx:babel-register --compilers js:babel-register --require test/setup.js --recursive test",
+    "start": "NODE_PATH=build node build/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lk-architecture/lk-app-front.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lk-architecture/lk-app-front/issues"
+  },
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "babel-cli": "^6.6.4",
+    "babel-eslint": "^6.0.2",
+    "babel-plugin-rewire": "^1.0.0-beta-4",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
+    "dynalite": "^1.0.3",
+    "eslint": "^3.5.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-react": "^6.2.1",
+    "jsdom": "^9.5.0",
+    "mocha": "^3.0.2",
+    "mock-localstorage": "^0.1.3",
+    "npm-run-all": "^3.1.0",
+    "redux-mock-store": "^1.0.2",
+    "sd-builder": "^3.0.1",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.2.45",
+    "axios": "^0.14.0",
+    "babel-polyfill": "^6.6.1",
+    "bluebird": "^3.3.4",
+    "bootstrap": "^3.3.6",
+    "bootstrap-table-react": "^1.1.1",
+    "dotenv": "^2.0.0",
+    "font-awesome": "^4.5.0",
+    "kinesalite": "^1.11.4",
+    "lato-font": "^1.1.1",
+    "lodash": "^4.7.0",
+    "moment": "^2.13.0",
+    "node-static": "^0.7.7",
+    "node-uuid": "^1.4.7",
+    "ramda": "^0.22.1",
+    "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "redux": "^3.3.1",
+    "redux-form": "^4.2.2",
+    "redux-logger": "^2.6.1",
+    "redux-persist": "^2.0.1",
+    "redux-thunk": "^2.0.1"
+  }
 }
