--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lk-app-front",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "lk app",
   "main": "app/main.html",
   "scripts": {
@@ -12,7 +12,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "lint": "eslint app test",
     "build": "sd-builder build && babel server --out-dir build",
-    "test": "NODE_PATH=app NODE_ENV=test mocha --compilers jsx:babel-register --compilers js:babel-register --require test/setup.js --recursive test",
+    "test": "NODE_PATH=app NODE_ENV=test mocha --compilers jsx:babel-register --compilers js:babel-register --require test/unit-setup.js --recursive test",
     "start": "NODE_PATH=build node build/index.js"
   },
   "repository": {
@@ -44,6 +44,7 @@
     "mock-localstorage": "^0.1.3",
     "npm-run-all": "^3.1.0",
     "redux-mock-store": "^1.0.2",
+    "redux-logger": "^2.6.1",
     "sd-builder": "^3.0.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
